@@ -1,5 +1,8 @@
 2007-09-01  Junichi Uekawa  <dancer@debian.org>
 
+	* parameter.c: 
+	* forkexec.c: move fork/exec code from parameter.c
+
 	* tests/014_ilistdump_test.sh: rewrite testsuite to use the generic dumping code.
 	* Makefile: install dumping code.
 	* cowdancer-ilistdump.1: document
